<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.yuukwn.pizzafeliz.LoginActivity"
    android:padding="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"/>
    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_senha"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"/>
    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:onClick="logar"
        style="@style/Fiap.Botao"/>

</LinearLayout>

</android.support.constraint.ConstraintLayout>
